--- a/carcount/app/src/main/res/layout/activity_main.xml
+++ b/carcount/app/src/main/res/layout/activity_main.xml
@@ -17,14 +17,43 @@
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/weidu"
-        android:text="@string/hello_world"
+        android:text="@string/hello_world2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/distance"
-        android:text="@string/hello_world"
+        android:text="@string/hello_world3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="start"
+        android:id="@+id/button" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="pause"
+        android:id="@+id/button2" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="stop"
+        android:id="@+id/button3" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="停車費："
+        android:id="@+id/textView" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText" />
 
 </LinearLayout>
